RESOLVED FIXED237468
WebRTC decoded frames are not correctly rotated in case GPU Process DOM rendering flag is set to true
https://bugs.webkit.org/show_bug.cgi?id=237468
Summary WebRTC decoded frames are not correctly rotated in case GPU Process DOM rende...
youenn fablet
Reported 2022-03-04 04:26:44 PST
WebRTC decoded frames are not correctly rotated in case GPU Process DOM rendering flag is set to true
Attachments
Patch (10.70 KB, patch)
2022-03-08 08:10 PST, youenn fablet
no flags
Patch (10.77 KB, patch)
2022-03-08 08:24 PST, youenn fablet
no flags
Patch for landing (10.77 KB, patch)
2022-03-08 23:34 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2022-03-04 04:27:16 PST
youenn fablet
Comment 2 2022-03-04 04:28:01 PST
This happens with ToT WebKit currently. I am not sure what is changing for MediaStreamTrack video renderer in case DOM rendering is turned on.
youenn fablet
Comment 3 2022-03-08 08:10:47 PST
youenn fablet
Comment 4 2022-03-08 08:24:48 PST
Eric Carlson
Comment 5 2022-03-08 08:38:15 PST
Comment on attachment 454124 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=454124&action=review > Source/WebCore/ChangeLog:9 > + We were creating remove video frames at webrtc decoder level but at that level, we do not know yet the rotation and timestamps of the frame. s/remove/remote/
youenn fablet
Comment 6 2022-03-08 23:34:12 PST
Created attachment 454196 [details] Patch for landing
EWS
Comment 7 2022-03-09 07:26:51 PST
Committed r291049 (248223@main): <https://commits.webkit.org/248223@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454196 [details].
Note You need to log in before you can comment on or make changes to this bug.